parr2014definitive/ch04/calculator/grammars/Expr.g4
grammar Expr;

import CommonLexerRules;

prog : stat+ ;

stat : expr NEWLINE
    | ID '=' expr NEWLINE
    | NEWLINE
    ;

expr : expr ('*' | '/') expr
    | expr ('+' | '-') expr
    | INT
    | ID
    | '(' expr ')'
    ;
